[package]
name = "zoo_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["models", "handler", "server", "usecase", "context"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "./server" }
tokio = { workspace = true }
async-trait = "0.1.81"


[workspace.dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5" }
