[package]
name = "zoo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
axum = { version = "0.7.5" }
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.81"
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "mock"
] }
